syntax = "proto3";

option csharp_namespace = "FoodDelivery.BasketApi.Grpc";

import "google/api/annotations.proto";


package BasketApi;

service Basket {
    rpc GetBasket(GetBasketRequest) returns (CustomerBasketResponse) 
    {
        option (google.api.http) =
        {
            get: "/v1/Basket"
        };
    }

    rpc UpdateBasket(UpdateBasketRequest) returns (CustomerBasketResponse) {
        option (google.api.http) =
        {
            post: "/v1/Basket"
            body: "*"
        };
    }
    rpc DeleteBasket(DeleteBasketRequest) returns (DeleteBasketResponse) {
        option (google.api.http) =
        {
            delete: "/v1/Basket"
        };
    }
}

message GetBasketRequest {
    string byerId = 1;
}

message CustomerBasketResponse {
    repeated BasketItem items = 1;
}

message BasketItem {
    int32 product_id = 2;
    int32 quantity = 6;
}

message UpdateBasketRequest {
    string byerId = 1;
    repeated BasketItem items = 2;
}

message DeleteBasketRequest {
    string byerId = 1;
}

message DeleteBasketResponse {
    
}